@@ -1,0 +1,43 @@
+namespace :backup do
+  
+  desc "GITLAB | Create a backup of the GitLab CI database"
+  task create: :environment do
+    configure_cron_mode
+
+    $progress.puts "Dumping database ... ".blue
+
+    Backup::Database.new.dump
+    $progress.puts "done".green
+
+    backup = Backup::Manager.new
+    backup.pack
+    backup.cleanup
+    backup.remove_old
+  end
+
+  desc "GITLAB | Restore a previously created backup"
+  task restore: :environment do
+    configure_cron_mode
+
+    backup = Backup::Manager.new
+    backup.unpack
+
+    $progress.puts "Restoring database ... ".blue
+    Backup::Database.new.restore
+    $progress.puts "done".green
+
+    backup.cleanup
+  end
+
+  def configure_cron_mode
+    if ENV['CRON']
+      # We need an object we can say 'puts' and 'print' to; let's use a
+      # StringIO.
+      require 'stringio'
+      $progress = StringIO.new
+    else
+      $progress = $stdout
+    end
+  end
+end
+
